<resources>
    <string name="app_name">WSO2 App Catalog</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_app_list">AppListActivity</string>
    <string name="title_activity_app_details">AppDetailsActivity</string>
    <string name="txt_domain">Domain</string>
    <string name="txt_search">Search...</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="dialog_please_wait">Please wait</string>
    <string name="error_app_fetch_failed_detail">Failed to retrieve applications, please check your connectivity and try again.</string>
    <string name="app_list_failed">Failed loading</string>
    <string name="txt_login">Login</string>
    <string name="app_type_mobile">Mobile Apps</string>
    <string name="app_type_web">Web Clips</string>
    <string name="app_type_enterprise">Enterprise</string>
    <string name="app_type_web_clip">WebClip</string>
    <string name="empty_string_character"></string>
    <string name="logout">SIGN OUT</string>
    <string name="action_install">INSTALL</string>
    <string name="action_uninstall">UNINSTALL</string>
    <string name="action_open">OPEN</string>
    <string name="action_update">Update</string>
    <string name="intent_extra_at">\/@</string>
    <string name="intent_extra_space">&#160;</string>
    <string name="toast_error_username">Please enter username</string>
    <string name="filter_hint">Select a category to filter</string>
    <string name="app_list_error">Failed to retrieve application list, please contact administrator</string>
    <string name="no_apps_found_msg">Sorry, There are no apps published yet! Please contact your publisher</string>
    <string name="toast_error_password">Please enter password</string>
    <string name="dialog_authenticate">Authenticating</string>
    <string name="dialog_message_please_wait">Please wait</string>
    <string name="shared_pref_client_credentials">clientCredentials</string>
    <string name="error_internal_server">Server is unavailable. Please contact administrator.</string>
    <string name="title_head_connection_error">Connection Failed</string>
    <string name="button_ok">OK</string>
    <string name="error_network_unavailable">Network connectivity is unavailable. Please check your network connectivity.</string>
    <string name="title_head_authentication_error">Authentication Failed</string>
    <string name="error_authentication_failed">Incorrect login information. Please try again.</string>
    <string name="error_for_all_unknown_authentication_failures">Cannot proceed the authentication. Please contact administrator.</string>
    <string name="txt_start_login">Continue</string>
    <string name="dialog_init_confirmation">You have set your server address to </string>
    <string name="dialog_init_middle">Your device is a </string>
    <string name="dialog_init_device_type">Device type</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="intent_extra_application">application</string>
    <string name="intent_extra_is_category">categoryFilter</string>
    <string name="application_package_prefix">package:</string>
    <string name="dialog_app_list">Retrieving application information</string>
    <string name="toast_message_enter_server_address">Please enter Server Address, i.e : www.abc.com</string>
    <string name="dialog_init_end_general"> are you sure you want to proceed ?</string>
    <string name="registration_heading">Set your server address here to continue, i.e : www.abc.com. If your server runs on a different port than the default ports (80 or 443), server address should be in following format. i.e : www.abc.com:9763</string>
    <string name="title_activity_read_more_info">ReadMoreInfoActivity</string>
    <string name="application_package_launcher_install_action">com.android.launcher.action.INSTALL_SHORTCUT</string>
    <string name="application_package_launcher_uninstall_action">com.android.launcher.action.UNINSTALL_SHORTCUT</string>
    <string name="operation_install">install</string>
    <string name="operation_uninstall">uninstall</string>
    <string name="application_mgr_download_location">/Download/</string>
    <string name="application_mgr_download_file_name">update.apk</string>
    <string name="application_mgr_mime">application/vnd.android.package-archive</string>
    <string name="shared_pref_installed_app">appPackageName</string>
    <string name="shared_pref_installed_file">appFileName</string>
    <string name="emm_server_url">emm_server_url</string>
    <string name="app_download_progress">app_progress</string>
    <string name="current_downloading_app">current_app</string>
    <string name="android_download_manager_ui_resolver">com.android.providers.downloads.ui</string>
    <string name="android_download_manager_list_resolver">com.android.providers.downloads.ui.DownloadList</string>
    <string name="downloader_message_title">App catalog is installing an app for you</string>
    <string name="downloader_message_description">App catalog is installing </string>
</resources>
