<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".LoginActivity"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#11375B">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:background="@drawable/ic_logo"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dip"
        android:padding="10dip" >

        <EditText
            android:id="@+id/etDomain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_domain"
            android:layout_marginTop="10dip"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_username"
            android:layout_marginTop="10dip"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dip"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" >
        </EditText>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dip"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:background="#11375B"
            android:text="@string/txt_login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="10dp"
            android:background="@drawable/repeat_bg"
            android:gravity="center"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
